2005-01-10  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: London: change City to City Airport.

2005-01-10  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Patch for London, UK from Nicholas J. Skehin
	  <nicholas@skehin.com>.

2005-01-10  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-about.c: Update to using GtkAboutDialog.

	* gweather-applet.c: Give three retries before giving up getting data.
	  Closes #125638.

2005-01-09  Davyd Madeley  <davyd@madeley.id.au>

	* gweather-dialog.c:
	* weather.c:
	* weather-wx.c:
	* weather.h: Support animated radar images. Closes bug #149380.
	  Patch from Jonathan Brandmeyer <jbrandmeyer@earthlink.net>.

2005-01-03  Davyd Madeley  <davyd@madeley.id.au>

	* weather.c: use g_locale_from_utf8 for displaying date
	  Patch originally by Gareth Owen <gowen72@yahoo.com>.

2004-12-30  Kjartan Maraas  <kmaraas@gnome.org>

	* Locations.xml.in: Fix up a bunch of encoding errors.

2004-12-24  Sebastien Bacher  <seb128@debian.org>

	* weather-metar.c: (metar_parse): fixed a crasher due to some typos in
	the parser (Closes: #162070).

2004-12-23  Sebastien Bacher  <seb128@debian.org>

	* weather-metar.c: (metar_parse): 
	patch from Ed Catmur <ed@catmur.co.uk> to only copy the datas
	when required (Closes: #161984).

2004-12-21  Davyd Madeley  <davyd@madeley.id.au>

	* weather-metar.c: Revert to a non-chained, more flexible METAR
	parser. Work by Frank Solensky.

2004-12-21  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: File encoding glitches had broken special
	characters for Germany and France, fixed them up. There may be others.

2004-12-21  Davyd Madeley  <davyd@madeley.id.au>

	* Locations.xml.in: Remove duplicate YPXM and YPXX
	* gweather.schemas.in: Add schema for coordinates field
	* gweather-dialog.c: Hide weather.com button if we're not using maps
	  from weather.com

2004-12-20  Dennis Cranston <dennis_cranston@yahoo.com>

	* gweather-pref.c: (gweather_pref_create):  Use HIG compliant