@@ -24993,7 +24993,7 @@
       <coordinates>38-52N 001-23E</coordinates>
     </location>
     <location>
-      <_name>Jerez De La Fronteraaeropuerto</_name>
+      <_name>Jerez De La Frontera</_name>
       <code>LEJR</code>
       <coordinates>36-45N 006-04W</coordinates>
     </location>
@@ -25027,17 +25027,17 @@
       <code>LELO</code>
       <coordinates>42-27N 002-20W</coordinates>
     </location>
-    <location>
-      <_name>Madri-Colmenar</_name>
-      <code>LECV</code>
-      <coordinates>40-39N 003-44W</coordinates>
-    </location>
     <city>
      <_name>Madrid</_name>
      <location>
        <_name>Barajas</_name>
        <code>LEMD</code>
        <coordinates>40-27N 003-33W</coordinates>
+     </location>
+     <location>
+       <_name>Colmenar Viejo (FAMET)</_name>
+       <code>LECV</code>
+       <coordinates>40-39N 003-44W</coordinates>
      </location>
      <location>
        <_name>Cuatro Vientos</_name>
