@@ -1,3 +1,7 @@
+2005-01-11  Davyd Madeley  <davyd@madeley.id.au>
+
+	* Locations.xml.in: patch from Javier F. Serrador. Closes #162737.
+
 2005-01-10  Davyd Madeley  <davyd@madeley.id.au>
 
 	* Locations.xml.in: London: change City to City Airport.
